# generics

./: .coveragerc  .cruft.json  .flake8  .importlinter  404.html  LICENSE  README.md  azure-pipelines.yml  index.html  mkdocs.yml  package.json  pyproject.toml  release.config.js  requirements.txt  sitemap.xml  tox.ini
.github/workflows/: pipeline.yml  pull_request.yml
attrs/: index.html
changelog/: index.html
dataclasses/: index.html
delegate/: index.html
delegated/: index.html
dependencies/: index.html
docs/: attrs.md  changelog.md  dataclasses.md  delegate.md  delegated.md  dependencies.md  index.md  installation.md  private.md  pydantic.md  reference.md  subtyping.md
installation/: index.html
private/: index.html
pydantic/: index.html
search/: search_index.json
src/_generics/: defended.py  delegate.py  delegated.py  exceptions.py  private.py
src/_generics/definitions/: __init__.py
src/_generics/entities/: __init__.py  attrs.py  dataclasses.py  pydantic.py
src/examples/: __init__.py  attrs.py  attrs_define.py  definitions.py
src/generics/: __init__.py  exceptions.py  private.py
subtyping/: index.html
testing/examples/: __init__.py  attrs.py  attrs_definitions.py  dataclass_definitions.py  dataclasses.py  definitions.py  delegates.py  pydantic.py  pydantic_definitions.py  subtyping.py  subtyping_definitions.py  sybtyping_definitions.py
tests/: conftest.py  test_attrs.py  test_configuration.py  test_dataclasses.py  test_defended.py  test_delegate.py  test_delegated.py  test_dependencies.py  test_private.py  test_pydantic.py  test_subtyping.py
tests/helpers/: app.py  configuration.py  helpers.py  memory_leaks.py  pyproject.toml
tests/helpers/entities/: __init__.py  attrs.py  attrs_annotated.py  dataclasses.py  pydantic_dataclasses.py  pydantic_model.py
tests/helpers/examples/: __init__.py  definitions.py  pydantic_model.py
