[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["Josiah Kaviani <proofit404@gmail.com>"]
classifiers = [
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
description = "A classy toolkit designed with OOP in mind."
documentation = "https://proofit404.github.io/generics"
homepage = "https://pypi.org/project/generics"
license = "BSD-2-Clause"
name = "generics"
packages = [
    { include = "_generics", from = "src" },
    { include = "generics", from = "src" },
]
readme = "docs/index.md"
repository = "https://github.com/proofit404/generics"
version = "3.9.0"

[tool.poetry.dependencies]
python = "*"

[tool.poetry.urls]
Changelog = "https://proofit404.github.io/generics/changelog"
Issues = "https://github.com/proofit404/generics/issues"
Twitter = "https://twitter.com/proofit404"
